changed inline to block to attempt better fix of tags overflow in IE11.

--- a/modules/core/styles/core/_mixins.scss
+++ b/modules/core/styles/core/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin tag-input-theme($theme) {
-    display: inline;
+    display: block;
     flex-direction: row;
     flex-wrap: wrap;
     position: relative;
